# wagtail-demo

./: .gitignore  pyproject.toml
core/settings/: base.py  dev.py
